deployment/edge/gcp/edge_interface/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: edge-interface
  name: edge-interface
  namespace: vio
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: front
      app.kubernetes.io/instance: vio
      app.kubernetes.io/name: edge-interface
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: front
        app.kubernetes.io/instance: vio
        app.kubernetes.io/name: edge-interface
    spec:
      containers:
      - name: edge-interface
        #        image: ghcr.io/octo-technology/vio/edge_interface:latest
        image: europe-west1-docker.pkg.dev/acn-gcp-octo-sas/tf-vio-artifacts/edge_interface:0.1.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        readinessProbe:
          httpGet:
            port: http
            path: /
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: http
            path: /
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
      imagePullSecrets:
        - name: artifact-registry
      restartPolicy: Always
