deployment/edge/gcp/edge_interface/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: vio
    ingress.kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: tf-airbus-vio-ip
  name: vio
  namespace: vio
spec:
  defaultBackend:
    service:
      name: edge-interface
      port:
        number: 80
  rules:
  - host: vio.octo.tools
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: edge-interface
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: edge-orchestrator
              port:
                number: 8000
